     framework introduced a `upsdrv_tweak_prognames()` hook method to let
     them manipulate the array of `prognames[]` aliases. [PR #3101]
   * Introduced `NOTIFY_STATE_EXTEND_TIMEOUT` option and relevant variables
     for `upsnotify()` method, so we can tell systemd to not kill the service
     unit if its shutdown takes long (see also the `SHUTDOWNEXIT` option in
     the `upsmon` client). [issue #3003]

 - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`, `metasys`,
   `masterguard`, `mge-utalk`, `oneac`, `phoenixcontact_modbus`, `pijuice`,
   `powercom`, `powervar_cx_ser`, `usbhid-ups`, `victronups` driver updates:
   * Moved code to align with NUT driver architecture, so `upsdrv_initups()`
     would focus on preparing communications, and `upsdrv_initinfo()` would
     actually talk to the device and set initial critical data values. [#1962]

 - `apcupsd-ups` driver updates:
   * Abandoned use of obsolete `gethostbyname()` in favour of `getaddrinfo()`.
     Extended to be IPv6-capable along the way. [#1209]

 - `nutdrv_qx` driver updates:
   * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen. [PR #3095]
   * New `nutdrv_qx_innovatae` adds support for Ippon INNOVA TAE series which
     are similar to Q1 except in reporting of nominal `voltage`, `current`,
     `frequency` data (that along with `battery_voltage_reports_one_pack` and
     `override.battery.packs=12` settings yields reasonable `battery.voltage.*`
     data points). [issue #3137, PR #3139]
   * `nutdrv_qx_masterguard` sub-driver adds a way to call battery test until
     the battery charge is low, using a new `test.battery.start.low` instant